--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <title>FrankApp</title>
   <base href="/">
 
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <!--<app-root></app-root>-->
-  <div>
-    <a>Assignment 2 Link: </a>
-    <a href="assets/index.html">                login.html                </a>
-  </div>
+  <app-root>Loading...</app-root>
+  <!--<div>-->
+    <!--<a>Assignment 2 Link: </a>-->
+    <!--<a href="assets/index.html">                login.html                </a>-->
+  <!--</div>-->
 </body>
 </html>
